<resources>
    <string name="app_name">SmallRedBook</string>
    <string name="message">消息</string>
    <string name="zan">赞</string>
    <string name="newfollow">新关注</string>
    <string name="comment">评论</string>
    <string name="user_id">账号:</string>
    <string name="pwd">密码：</string>
    <string name="name1">姓名：</string>
    <string name="sex">性别：</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="email">电话：</string>
    <string name="editmessage">编辑资料</string>
    <string name="yes">编辑成功</string>
    <string name="changpwd">修改密码</string>
    <string name="oldpwd">旧密码</string>
    <string name="newpwd1">再次输入密码</string>
    <string name="newpwd">新密码</string>
    <string name="surepwd">重置密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password">password</string>
    <string name="root">root</string>
    <string name="name">用户名</string>
    <string name="sex1">性别</string>
    <string name="age">年龄</string>
    <string name="picture">头像</string>
    <string name="describe">个性签名</string>
    <string name="birth">出生日期</string>
    <string name="address">地址</string>
    <string name="editpwd">修改密码</string>
    <string name="pz">拍照</string>
    <string name="select">从相册选择</string>
    <string name="no">取消</string>
    <string name="m">请输入用户名</string>
    <string name="p">请输入密码</string>
    <string name="z">快速注册</string>
    <string name="lo">登 录</string>
    <string name="pw">请输入密码</string>
    <string name="yh">请输入用户名</string>
    <string name="yn">用户名</string>
    <string name="nc">昵 称</string>
    <string name="s">性 别</string>
    <string name="q">签 名</string>
    <string name="qx">取消</string>
    <string name="bc">保存</string>
    <string name="add">地址</string>
</resources>
