<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关注"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/zanpicture"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/zan"
            />
        <TextView
            android:id="@+id/zan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/zanpicture"
            android:text="@string/zan"
            android:textSize="20sp"
            android:background="@drawable/search_border"/>
        <ImageView
            android:id="@+id/followpiture"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginLeft="65dp"
            android:layout_alignTop="@id/zanpicture"
            android:layout_toRightOf="@id/zanpicture"
            android:background="@drawable/followtwo"
            />
        <TextView
            android:id="@+id/newfollow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_alignTop="@id/zan"
            android:layout_toRightOf="@id/zan"
            android:text="@string/newfollow"
            android:textSize="20sp"
            android:background="@drawable/search_border"/>
        <ImageView
            android:id="@+id/commentpiture"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginLeft="90dp"
            android:layout_alignTop="@id/followpiture"
            android:layout_toRightOf="@id/followpiture"
            android:background="@drawable/comment"
            />
        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_alignTop="@id/newfollow"
            android:layout_toRightOf="@id/newfollow"
            android:text="@string/comment"
            android:textSize="20sp"
            android:background="@drawable/search_border"/>

    </RelativeLayout>

    <TextView
        android:gravity="center"
        android:text="关注"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#000"
        android:layout_margin="10dp"
        />



    <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
        android:id="@+id/act_recycler_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <com.example.smallredbook.utils.HeaderView
            android:gravity="center"
            android:id="@+id/swipe_refresh_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/swipe_target"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>



        <com.example.smallredbook.utils.LoadMoreFooterView
            android:id="@+id/swipe_load_more_footer"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"/>


    </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>




</LinearLayout>
