<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".app.login">
    <TextView
        android:textColor="#f00"
        android:text="请根据自己的数据库和服务器，配置好Constants.java文件中数据库以及服务器地址，否则无法使用"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--   -->
<!--    >-->

    <ImageView

        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/img1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >
        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/yh"
            android:background="#fff"
            android:paddingLeft="8dp"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="@color/register_hint_text_color"
            android:textCursorDrawable="@null"
            android:textSize="18sp" />
        <!--            <View-->
        <!--                android:layout_width="fill_parent"-->
        <!--                android:layout_height="1dp"-->
        <!--                />-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"

                android:drawablePadding="10dp"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:background="#fff"
                android:textColor="#000000"
                android:textColorHint="@color/register_hint_text_color"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal">
        <Button
            android:padding="10dp"
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z"
            android:textColor="#fff"
            android:background="#00000000"
            android:textSize="14sp" />

    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="#4CAF50"
        android:text="@string/lo"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</LinearLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".app.login">-->

    <!--    <EditText-->
    <!--        android:id="@+id/password"-->
    <!--        android:layout_width="206dp"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:ems="10"-->
    <!--        android:hint="password"-->
    <!--        android:inputType="textPassword"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.4" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/name"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:inputType="textPersonName"-->

    <!--        android:hint="root"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.2"/>-->

    <!--    <Button-->
    <!--        android:id="@+id/register_btn"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="68dp"-->
    <!--        android:layout_marginLeft="68dp"-->
    <!--        android:text="注册"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintRight_toLeftOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.606" />-->

    <!--    <Button-->
    <!--        android:id="@+id/login_btn"-->
    <!--        android:layout_width="92dp"-->
    <!--        android:layout_height="44dp"-->
    <!--        android:layout_marginStart="256dp"-->
    <!--        android:layout_marginLeft="256dp"-->
    <!--        android:text="登录"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.2"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.602" />-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
